# freecad_mcp-jp

./: Init.py  InitGui.py  README.md  README_JP.md  addon.py  freecad_bridge.py  freecad_mcp.py  package.xml  pyproject.toml
src/: README.md  README_JP.md  freecad_bridge.py
